# rdf-validation-comparison

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  documentation.yml  draft.yml  labeler.yml  tests.yml
docs/: index.md
docs/snippets/: links.txt
notebooks/: template.ipynb
src/rdf_validation_comparison/: __init__.py  skeleton.py
src/rdf_validation_comparison/data/: ch7_6.shacl  ch7_6.ttl  ex161.shacl  ex161.shex  ex161.ttl  ex162.shacl  ex162.shex  ex162.ttl  pyshex_notebooks_shex_example.py  pyshex_notebooks_shex_example.shex  pyshex_notebooks_shex_example.ttl
tests/: __init__.py  conftest.py  test_skeleton.py
